--- a/css/homepage.css
+++ b/css/homepage.css
@@ -66,7 +66,7 @@ img
 }
 .bgimg {
   background-image: url('../imgs/img1.jpg');
-  min-height: 100vh;
+  min-height: 95vh;
   background-position: center;
   background-size: cover;
   position: relative;
@@ -113,7 +113,7 @@ img
 }
 .about
 {
-  background-image: url('../imgs/img2.jpg');
+  /* background-image: url('../imgs/img2.jpg'); */
   min-height: 100vh;
   background-position: center;
   background-size: cover;
