--- a/css/homepage.css
+++ b/css/homepage.css
@@ -29,16 +29,20 @@ hr
 button
 {
   background:  transparent;
-  height:  52px;
-  line-height:  50px;
+  height:  65px;
+  /* width: auto; */
+  /* line-height:  50px; */
   border:  2px solid white;
-  display:  inline-block;
+  /* display:  inline-block; */
   float:  none;
   text-align:  center;
-  width:  240px;
-  padding:  0px!important;
+  width:  400px;
+  padding:  0px !important;
   font-size:  28px;
   color:  #fff;
+  font-weight: 300;
+  background: linear-gradient(rgba(255, 255, 255, 0.3),rgb(255, 255, 255, 0.3));
+  border-radius: 30px;
 }
 button:hover
 {
@@ -53,14 +57,15 @@ p
 }
 footer 
 {
-  text-align: left;
+  text-align: center;
   padding: 3px;
-  width: auto;
   background-color: #303030;
   color: white;
 }
 img
 {
+  border-radius: 100px;
+  margin-left: 50px;
   height: 80px;
   width: 110px;
 }
@@ -92,11 +97,18 @@ img
 }
 .menu
 {
+  border-radius: 30px;
   position:fixed;
   z-index: 100 ;
-  right:5px;
+  right:50px;
   top:15px;
+  background: linear-gradient(rgba(1, 1, 1, 0.4),rgb(1, 1, 1, 0.4));
 }
+
+.menu > a{
+  letter-spacing: 1.5px;
+}
+
 .btns
 {
   background:  transparent;
@@ -113,32 +125,48 @@ img
 }
 .about
 {
-  /* background-image: url('../imgs/img2.jpg'); */
+  /* background-color: grey; */
+  /* background-image: url('../imgs/2.jepg'); */
+  /* background: linear-gradient(rgba(1, 1, 1, 0.4),rgb(1, 1, 1, 0.4)),url("../imgs/2.jpeg"); */
   min-height: 100vh;
   background-position: center;
   background-size: cover;
   position: relative;
-  color: #fff;
+  color: black;
 }
+/* 
+.browse-button-main{
+  border-radius: 30px;
+} */
+
 .detail
 {
+  width: 100wh;
   font-size: 24px ;
-  position:absolute;
-  left:50%;
-  bottom:0;
-  transform:translate(-50%,0%);
-  -ms-transform:translate(-50%,0%);
+  /* position:absolute; */
+  align-items: center;
 }
 .definition
 {
-  background-color: #345b63;
-  color: #000000;
+  /* background-color: #345b63; */
+  color: black;
   margin: 4px ;
-  padding: 3% ;
-  font-size: 20px ;
-  position:absolute;
+  /* padding: 3% ; */
+  font-size: 24px ;
+  /* padding-top: 200px; */
+  padding: 180px 100px;
+  /* position:absolute;
   top:50%;
   left:40%;
   transform:translate(-32%,-70%);
-  -ms-transform:translate(-50%,-50%);
+  -ms-transform:translate(-50%,-50%); */
+}
+
+.definition > p{
+  color: black;
+  /* text-align:  center; */
+}
+
+.definition > h3{
+  text-decoration: underline;
 }
