--- a/css/problem.css
+++ b/css/problem.css
@@ -54,7 +54,7 @@ input[type="text"] {
 .problems-grid {
   font-size: 3rem;
   display: grid;
-  grid-template-columns: 45rem 45rem 45rem;
+  grid-template-columns: auto auto auto;
   grid-template-rows: auto auto auto;
   grid-gap: 20px;
   /* border: 2px solid red; */
@@ -80,7 +80,22 @@ a, a:hover, a:focus, a:active {
 }
 
 .problem:hover{
-    background-color: grey;
+    background-color: aquamarine;
     transition: 0.3s ease-in-out;
 }
 
+.back-to-home{
+  height: 200px;
+  width: auto;
+  display: inline-block;
+  font-weight: bold;
+  background-color: tomato;
+  border-radius: 2rem;
+  padding: 1em 1.3em;
+  text-align: center;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.308);
+}
+
+i{
+  margin-top: 30px;
+}
